Fixed API and swagger for update, added size gesture
